# go-program-not-importable-package

./: .gitignore  MODULE.bazel  README.md  go.mod  go.sum
fails-with-bazel-and-plain-go/: BUILD.bazel  main.go
works-with-bazel-and-plain-go/: BUILD.bazel  main.go
works-with-bazel-and-plain-go/hack/: BUILD.bazel
works-with-bazel-but-not-with-plain-go/: BUILD.bazel  main.go
works-with-bazel-but-not-with-plain-go/hack/: BUILD.bazel  hack.go
