module(
    name = "go-program-not-importable-package",
    version = "0.0.0",
)

bazel_dep(
    name = "gazelle",
    version = "0.36.0",
    repo_name = "bazel_gazelle",
)
bazel_dep(
    name = "rules_go",
    version = "0.46.0",
    repo_name = "io_bazel_rules_go",
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "@go-program-not-importable-package//:go.mod")
use_repo(
    go_deps,
    "com_github_jimmidyson_configmap_reload",
)
