load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "works-with-bazel-but-not-with-plain-go_lib",
    srcs = ["main.go"],
    importpath = "github.com/psalaberria002/go-program-not-importable-package/works-with-bazel-but-not-with-plain-go",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "works-with-bazel-but-not-with-plain-go",
    embed = [":works-with-bazel-but-not-with-plain-go_lib"],
    visibility = ["//visibility:public"],
)
